--- a/adminconsole/Views/Shared/_Layout.cshtml
+++ b/adminconsole/Views/Shared/_Layout.cshtml
@@ -8,6 +8,7 @@
     <link rel="stylesheet" href="~/css/site.css" />
     <link href="https://unpkg.com/bootstrap-table@1.15.4/dist/bootstrap-table.min.css" rel="stylesheet">
     <script src="~/lib/jquery/dist/jquery.min.js"></script>
+    <script src="https://use.fontawesome.com/ff507f8e3b.js"></script>
 </head>
 <body>
 
