Added virtual scroll

--- a/adminconsole/Views/Locations/Index.cshtml
+++ b/adminconsole/Views/Locations/Index.cshtml
@@ -8,6 +8,7 @@
 <table class="table table-bordered"
         id="table"
         data-search="true"
+        data-height="500"
         data-show-search-clear-button="true"
         data-show-export="true"
         data-sort-stable="true"
