--- a/adminconsole/Views/Locations/Deleted.cshtml
+++ b/adminconsole/Views/Locations/Deleted.cshtml
@@ -4,118 +4,90 @@
     ViewData["Title"] = "Previously Deleted";
 }
 
-<div class="showLocations">
-    <table class="table table-bordered"
-           id="table"
-           data-toggle="table"
-           data-search="true"
-           data-show-search-clear-button="true"
-           data-show-columns="true"
-           data-show-columns-toggle-all="true"
-           data-show-export="true"
-           data-sort-stable="true"
-           data-pagination="true">
+<table class="table table-bordered"
+        id="table"
+        data-search="true"
+        data-height="500"
+        data-show-search-clear-button="true"
+        data-show-export="true"
+        data-sort-stable="true"
+        data-virtual-scroll="true">
 
-        <thead>
+    <thead>
+        <tr>
+            <th>
+                Controls
+            </th>
+            <th data-field="Name" data-sortable="true">
+                @Html.DisplayNameFor(model => model.Name)
+            </th>
+            <th>
+                @Html.DisplayNameFor(model => model.LocationType)
+            </th>
+            <th data-field="Address" data-sortable="true">
+                @Html.DisplayNameFor(model => model.Address)
+            </th>
+            <th data-field="City" data-sortable="true">
+                @Html.DisplayNameFor(model => model.City)
+            </th>
+            <th>
+                @Html.DisplayNameFor(model => model.PostalCode)
+            </th>
+            <th data-field="State" data-sortable="true">
+                @Html.DisplayNameFor(model => model.State)
+            </th>
+            <th>
+                @Html.DisplayNameFor(model => model.Latitude)
+            </th>
+            <th>
+                @Html.DisplayNameFor(model => model.Longitude)
+            </th>
+        </tr>
+    </thead>
+    <tbody>
+        @foreach (var item in Model)
+        {
             <tr>
-                <th>
-                    Controls
-                </th>
-                <th>
-                    @Html.DisplayNameFor(model => model.Name)
-                </th>
-                <th>
-                    @Html.DisplayNameFor(model => model.LocationType)
-                </th>
-                <th>
-                    @Html.DisplayNameFor(model => model.Address)
-                </th>
-                <th>
-                    @Html.DisplayNameFor(model => model.City)
-                </th>
-                <th>
-                    @Html.DisplayNameFor(model => model.PostalCode)
-                </th>
-                <th>
-                    @Html.DisplayNameFor(model => model.County)
-                </th>
-                <th>
-                    @Html.DisplayNameFor(model => model.State)
-                </th>
-                <th>
-                    @Html.DisplayNameFor(model => model.Country)
-                </th>
-                <th>
-                    @Html.DisplayNameFor(model => model.Latitude)
-                </th>
-                <th>
-                    @Html.DisplayNameFor(model => model.Longitude)
-                </th>
-                <th>
-                    @Html.DisplayNameFor(model => model.RetailOutlet)
-                </th>
-                <th>
-                    @Html.DisplayNameFor(model => model.Hours)
-                </th>
+                <td>
+                    <a asp-action="DeletedDetails" asp-route-id="@item.LocationId" value="@item.LocationId">Details</a> |
+                    <a asp-action="Recover" asp-route-id="@item.LocationId">Recover</a>
+                </td>
+                <td>
+                    @if (item.Name == "BECU")
+                    {
+                        <img src="~/media/BEC-Logo-Icon-pms.png" />
+                    }
+                    else
+                    {
+                        <img src="~/media/logo_co-op.png" style="height: 40px;" />
+                    }
+                    @Html.DisplayFor(modelItem => item.Name)
+                </td>
+                <td>
+                    @Html.DisplayFor(modelItem => item.LocationType)
+                </td>
+                <td>
+                    @Html.DisplayFor(modelItem => item.Address)
+                </td>
+                <td>
+                    @Html.DisplayFor(modelItem => item.City)
+                </td>
+                <td>
+                    @Html.DisplayFor(modelItem => item.PostalCode)
+                </td>
+                <td>
+                    @Html.DisplayFor(modelItem => item.State)
+                </td>
+                <td>
+                    @Html.DisplayFor(modelItem => item.Latitude)
+                </td>
+                <td>
+                    @Html.DisplayFor(modelItem => item.Longitude)
+                </td>
             </tr>
-        </thead>
-        <tbody>
-            @foreach (var item in Model)
-            {
-                <tr>
-                    <td>
-                        <a asp-action="DeletedDetails" asp-route-id="@item.LocationId" value="@item.LocationId">Details</a> |
-                        <a asp-action="Recover" asp-route-id="@item.LocationId">Recover</a>
-                    </td>
-                    <td>
-                        @if (item.Name == "BECU")
-                        {
-                            <img src="~/media/BEC-Logo-Icon-pms.png" />
-                        }
-                        else
-                        {
-                            <img src="~/media/logo_co-op.png" style="height: 40px;" />
-                        }
-                        @Html.DisplayFor(modelItem => item.Name)
-                    </td>
-                    <td>
-                        @Html.DisplayFor(modelItem => item.LocationType)
-                    </td>
-                    <td>
-                        @Html.DisplayFor(modelItem => item.Address)
-                    </td>
-                    <td>
-                        @Html.DisplayFor(modelItem => item.City)
-                    </td>
-                    <td>
-                        @Html.DisplayFor(modelItem => item.PostalCode)
-                    </td>
-                    <td>
-                        @Html.DisplayFor(modelItem => item.County)
-                    </td>
-                    <td>
-                        @Html.DisplayFor(modelItem => item.State)
-                    </td>
-                    <td>
-                        @Html.DisplayFor(modelItem => item.Country)
-                    </td>
-                    <td>
-                        @Html.DisplayFor(modelItem => item.Latitude)
-                    </td>
-                    <td>
-                        @Html.DisplayFor(modelItem => item.Longitude)
-                    </td>
-                    <td>
-                        @Html.DisplayFor(modelItem => item.RetailOutlet)
-                    </td>
-                    <td>
-                        @Html.DisplayFor(modelItem => item.Hours)
-                    </td>
-                </tr>
-            }
-        </tbody>
-    </table>
-</div>
+        }
+    </tbody>
+</table>
 
 @section scripts {
     <script src="~/js/TableDataExportHelper.js"></script>
