Table rows are now striped

--- a/adminconsole/Views/Locations/Deleted.cshtml
+++ b/adminconsole/Views/Locations/Deleted.cshtml
@@ -4,7 +4,7 @@
     ViewData["Title"] = "Previously Deleted";
 }
 
-<table class="table table-bordered"
+<table class="table table-bordered table-striped"
         id="table"
         data-search="true"
         data-height="500"
