--- a/adminconsole/Views/Locations/Index.cshtml
+++ b/adminconsole/Views/Locations/Index.cshtml
@@ -5,7 +5,7 @@
 }
 
 
-<table class="table table-bordered"
+<table class="table table-bordered table-striped"
         id="table"
         data-search="true"
         data-height="500"
