Updated Deleted UI

--- a/adminconsole/Views/Locations/Deleted.cshtml
+++ b/adminconsole/Views/Locations/Deleted.cshtml
@@ -5,13 +5,13 @@
 }
 
 <table class="table table-bordered table-striped"
-        id="table"
-        data-search="true"
-        data-height="500"
-        data-show-search-clear-button="true"
-        data-show-export="true"
-        data-sort-stable="true"
-        data-virtual-scroll="true">
+       id="table"
+       data-search="true"
+       data-height="500"
+       data-show-search-clear-button="true"
+       data-show-export="true"
+       data-sort-stable="true"
+       data-virtual-scroll="true">
 
     <thead>
         <tr>
@@ -91,5 +91,5 @@
 
 @section scripts {
     <script src="~/js/TableDataExportHelper.js"></script>
-    <script src="~/js/TableShowHelper.js"></script>
+    <script src="~/js/ChangeSearchClearIcon.js"></script>
 }
